Updated service impl